tools/flowc/tests/errors/error16.flow
import string;

// Test on detection of name conflict of a local variable in switch and a struct/union

x : (a : int);
y ::= A;
	A();

fun1() -> int {
	s = Some(5);
	switch (s) {
		Some(x): x;
		None(): 0;
	};
	t = Some(4);
	switch (t) {
		Some(y) : 3;
		None(): 2;
	}
}
